--- a/style.css
+++ b/style.css
@@ -3,3 +3,44 @@ body {
   height: 100%;
   margin: 0;
 }
+
+header{
+  text-align: center;
+}
+
+img{
+  margin: 0 auto;
+ display:block ; 
+ width: 50%;
+}
+
+figcaption{
+  font-size: 12px;
+text-align: center;
+}
+
+#featured-property p{
+  text-align: center;
+}
+
+#details {
+
+  display: flex;
+  background-color: red;
+  padding: 12px;
+  color: black;
+}
+
+#details div{
+  flex: 1;
+  margin: 10px;
+}
+
+#details h3{
+  margin-top: 0;
+}
+
+#details a{
+  color: blue;
+  text-decoration: none;
+}
